# hsc_independent

./: .gitignore  README.md  pyproject.toml
Fig5A/: fig5a.ipynb
Fig5D/: fig5d.ipynb
TableS1/: deseq_right_end_vs_left_end.R  deseq_right_vs_left.R  x_coordinate_right_end_vs_left_end.csv  x_coordinate_right_vs_left.csv
