[tool.poetry]
name = "hsc_independent"
version = "0.1.0"
description = ""
authors = ["takashi.yamanashi@riken.jp"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.16.3"
pandas = "0.24.2"
scanpy = "1.4.3"
scvelo = "0.1.19"
anndata = "0.6.21"
umap-learn = "0.3.9"
scipy = "1.2.1"
scikit-learn = "0.21.2"
statsmodels = "0.10.0"
jupyterlab = "1.2.3"
numba = "0.50.0"
h5py = "2.10.0"
python-igraph = {url = "https://files.pythonhosted.org/packages/d6/15/e9e3fea6fc619d1c6c75667c5a1d8b7c854a36fff01a54c09f4ffbf9c0e6/python-igraph-0.7.1-1.tar.gz"}
pyzmq = "18.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
